--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "dependencies": {
     "babel-runtime": "6.x.x",
     "chai": "^3.5.0",
+    "dompurify": "^1.0.4",
     "enzyme": "^2.4.1",
     "highlight.js": "^9.3.0",
+    "jsdom": "^11.10.0",
     "marked": "^0.3.5",
     "prop-types": "^15.5.10"
   },
